# bxAgent

./: .env.example  .gitignore  .gitmodules  README.md  main.py  pyproject.toml  requirements.txt
scripts/: test.sh
src/: main.py  prompt.py
