[project]
name = "bxagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "deepagents==0.5.1",
    "dotenv==0.9.9",
    "ipykernel==7.2.0",
    "langchain-openai==1.1.12",
    "langfuse==4.0.6",
    "pydantic>=2.12.5",
]
